--- a/TaesanHotelWeb/src/main/webapp/WEB-INF/web.xml
+++ b/TaesanHotelWeb/src/main/webapp/WEB-INF/web.xml
@@ -1,50 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-xmlns="http://java.sun.com/xml/ns/javaee" 
-xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
-https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+
+	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/spring/root-context.xml</param-value>
+	</context-param>
 	
-	<!--인코딩 처리-->
-	<filter>
-		<filter-name>characterEncoding</filter-name>
-		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+	<!-- Creates the Spring Container shared by all Servlets and Filters -->
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+
+	<!-- Processes application requests -->
+	<servlet>
+		<servlet-name>appServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
-			<param-name>encoding</param-name>
-			<param-value>EUC-KR</param-value>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
 		</init-param>
-	</filter>
-	<filter-mapping>
-		<filter-name>characterEncoding</filter-name>
-		<url-pattern>*.do</url-pattern>
-	</filter-mapping>
-	
-  <!-- 서블릿 컨테이너 생성 -->
-  <servlet>
-    <servlet-name>action</servlet-name>
-    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-    
-    <!--스프링 컨테이너 위치 지정-->
-    <init-param>
-    	<param-name>contextConfigLocation</param-name>
-    	<param-value>/WEB-INF/config/presentation-layer.xml</param-value> <!--기본 경로에다가 생성(/WEB-INF/config/presentaion-layer.xml 파일 로딩)-->
-    </init-param>
-    
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>action</servlet-name>
-    <url-pattern>*.do</url-pattern>
-  </servlet-mapping>
-  
-  <!--ContextLoaderListener는 기본적으로 /WEB-INF/applicationContext.xml 파일을 읽는다 그것의 경로를 바꾸는 작업-->
-  <context-param>
-  	<param-name>contextConfigLocation</param-name>
-  	<param-value>classpath:applicationContext5.xml</param-value>
-  </context-param>
-  
-  <!--ContextLoaderListener생성-->
-  <listener>
-  	<listener-class>
-  		org.springframework.web.context.ContextLoaderListener
-  	</listener-class>
-  </listener>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+		
+	<servlet-mapping>
+		<servlet-name>appServlet</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+
 </web-app>
