--- a/TaesanHotelWeb/src/main/webapp/WEB-INF/web.xml
+++ b/TaesanHotelWeb/src/main/webapp/WEB-INF/web.xml
@@ -37,7 +37,7 @@
   <!--ContextLoaderListener는 기본적으로 /WEB-INF/applicationContext.xml 파일을 읽는다 그것의 경로를 바꾸는 작업-->
   <context-param>
   	<param-name>contextConfigLocation</param-name>
-  	<param-value>classpath:/spring/root-context.xml</param-value>
+  	<param-value>classpath:root-context.xml</param-value>
   </context-param>
   
   <!--ContextLoaderListener생성-->
