--- a/TaesanHotelWeb/src/main/webapp/WEB-INF/web.xml
+++ b/TaesanHotelWeb/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,21 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+	<!--에러 처리-->
+	<error-page>
+	    <error-code>400</error-code>
+	    <location>/WEB-INF/views/error/400.jsp</location>
+	</error-page>
+	 
+	<error-page>
+	    <error-code>404</error-code>
+	    <location>/WEB-INF/views/error/404.jsp</location>
+	</error-page>
+	 
+	<error-page>
+	    <error-code>500</error-code>
+	    <location>/WEB-INF/views/error/500.jsp</location>
+	</error-page>
 	
 	<!--인코딩 처리-->
 	<filter>
